--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,13 +14,20 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #fee8e8;
     --foreground: #ededed;
   }
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  min-height: 100vh;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  /* background: var(--background);
+  color: var(--foreground); */
+  /* text-align: end; */
   font-family: Arial, Helvetica, sans-serif;
 }
